# unimport

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  .unimport.cfg  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  action.yml  codecov.yml  mkdocs.yml  pyproject.toml  pythonapp.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tes.py  tesssst.py  tox.ini  unimport.py  versions.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: build-docs.yml  codecov.yml  docker.yml  docs.yml  lint.yml  main.yml  package-publish.yml  playground.yml  pre-commit-old.yml  pre-commit.yml  publish.yml  pypi.yml  python-publish.yml  self-action.yml  test-legacy.yml  test.yml  unimport.yml
0.12.2/: 404.html  index.html
0.12.2/AUTHORS/: index.html
0.12.2/CHANGELOG/: index.html
0.12.2/CONTRIBUTING/: index.html
0.12.2/FAQ/: index.html
0.12.2/installation/: index.html
0.12.3/: index.html  sitemap.xml
0.12.3/AUTHORS/: index.html
0.12.3/CHANGELOG/: index.html
0.12.3/CONTRIBUTING/: index.html
0.12.3/FAQ/: index.html
0.12.3/installation/: index.html
0.12.3/search/: search_index.json
0.13.0/: index.html  sitemap.xml
0.13.0/AUTHORS/: index.html
0.13.0/CHANGELOG/: index.html
0.13.0/CONTRIBUTING/: index.html
0.13.0/FAQ/: index.html
0.13.0/installation/: index.html
0.13.0/search/: search_index.json
0.14.0/: 404.html  index.html  sitemap.xml
0.14.0/AUTHORS/: index.html
0.14.0/CHANGELOG/: index.html
0.14.0/CONTRIBUTING/: index.html
0.14.0/FAQ/: index.html
0.14.0/installation/: index.html
0.14.0/search/: search_index.json
0.14.1/: index.html  sitemap.xml
0.14.1/AUTHORS/: index.html
0.14.1/CHANGELOG/: index.html
0.14.1/CONTRIBUTING/: index.html
0.14.1/FAQ/: index.html
0.14.1/installation/: index.html
0.14.1/search/: search_index.json
0.15.0/: index.html  sitemap.xml
0.15.0/AUTHORS/: index.html
0.15.0/CHANGELOG/: index.html
0.15.0/CONTRIBUTING/: index.html
0.15.0/FAQ/: index.html
0.15.0/installation/: index.html
0.15.0/search/: search_index.json
0.16.0/: 404.html  index.html  sitemap.xml
0.16.0/AUTHORS/: index.html
0.16.0/CHANGELOG/: index.html
0.16.0/CONTRIBUTING/: index.html
0.16.0/FAQ/: index.html
0.16.0/installation/: index.html
0.16.0/search/: search_index.json
0.16.1/: index.html  sitemap.xml
0.16.1/AUTHORS/: index.html
0.16.1/CHANGELOG/: index.html
0.16.1/CONTRIBUTING/: index.html
0.16.1/FAQ/: index.html
0.16.1/installation/: index.html
0.16.1/search/: search_index.json
1.0.0/: index.html  sitemap.xml
1.0.0/AUTHORS/: index.html
1.0.0/CHANGELOG/: index.html
1.0.0/CONTRIBUTING/: index.html
1.0.0/FAQ/: index.html
1.0.0/installation/: index.html
1.0.0/search/: search_index.json
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/AUTHORS/: index.html
1.0.1/CHANGELOG/: index.html
1.0.1/CONTRIBUTING/: index.html
1.0.1/FAQ/: index.html
1.0.1/installation/: index.html
1.0.1/search/: search_index.json
1.1.0/: 404.html  index.html
1.1.0/AUTHORS/: index.html
1.1.0/CHANGELOG/: index.html
1.1.0/CONTRIBUTING/: index.html
1.1.0/FAQ/: index.html
1.1.0/installation/: index.html
1.1.0/search/: search_index.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/AUTHORS/: index.html
1.2.0/CHANGELOG/: index.html
1.2.0/CONTRIBUTING/: index.html
1.2.0/installation/: index.html
1.2.0/search/: search_index.json
1.2.1/: index.html  sitemap.xml
1.2.1/AUTHORS/: index.html
1.2.1/CHANGELOG/: index.html
1.2.1/CONTRIBUTING/: index.html
1.2.1/installation/: index.html
1.2.1/search/: search_index.json
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/CHANGELOG/: index.html
1.3.0/CONTRIBUTING/: index.html
1.3.0/overrides/: main.html
1.3.0/search/: search_index.json
1.3.1/: index.html  sitemap.xml
1.3.1/AUTHORS/: index.html
1.3.1/CHANGELOG/: index.html
1.3.1/installation/: index.html
1.3.1/search/: search_index.json
1.4.0/: 404.html  index.html  robots.txt  sitemap.xml
1.4.0/AUTHORS/: index.html
1.4.0/CHANGELOG/: index.html
1.4.0/CONTRIBUTING/: index.html
1.4.0/installation/: index.html
1.4.0/search/: search_index.json
docs/: AUTHORS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  FAQ.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  authors.md  changelog.md  contributing.md  faq.md  index.html  index.md  installation.md  nav.md  summary.md  unimport_vs_autoflake.md
docs/overrides/: main.html
docs/scripts/: README.md  used-imports.md
docs/tutorial/: command-line-options.md  configurations.md  installation.md  other-useful-features.md  supported-behaviors.md  use-with-docker.md  use-with-github-action.md  use-with-pre-commit.md
example_configuration/django/: .unimport.cfg  pyproject.toml  setup.cfg
images/logo/: unimport.ai
latest/: 404.html  index.html
latest/AUTHORS/: index.html
latest/CHANGELOG/: index.html
latest/CONTRIBUTING/: index.html
latest/FAQ/: index.html
latest/installation/: index.html
latest/overrides/: main.html
playground/: index.html  index.js  index.py
rare_cases/: __future__.py  case__all__.py  case_comma.py  case_try_except.py  readme.md
src/unimport/: __init__.py  __main__.py  analyzer.py  color.py  config.py  constants.py  enums.py  exceptions.py  main.py  meta.py  refactor.py  statement.py  typing.py  utils.py
tests/: conftest.py  test_auto_refactor.py  test_cfv.py  test_color.py  test_config.py  test_default_exclude.py  test_dublicate_import.py  test_duplicate_import.py  test_emoji.py  test_enum.py  test_from_import_star.py  test_linesep.py  test_main.py  test_metadata.py  test_overwrite.py  test_refactor.py  test_scanner.py  test_session.py  test_unused_import.py  test_utils.py  utils.py
unimport/: .unimport.cfg  __init__.py  __main__.py  analyzer.py  auto_refactor.py  color.py  config.py  console.py  constants.py  dedect.py  emoji.py  files.py  main.py  models.py  refactor.py  relate.py  scan.py  session.py  statement.py  unused.py  utils.py
(+445 files in other folders)
