# Build system

[build-system]
requires = [
    "setuptools>=45",
    "wheel"
]
build-backend = "setuptools.build_meta"

# Project metadata

[project]
name = "unimport"
dynamic = ["version"]
description = "The ultimate linter and formatter for removing unused import statements in your code."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hakan Çelik", email = "hakancelikdev@gmail.com"}
]
keywords = ["unused", "import"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "libcst>=0.4.10,<=1.8.2; python_version >= '3.11'",
    "libcst>=0.3.7,<=1.8.2; python_version == '3.10'",
    "libcst>=0.3.7,<=1.8.2; python_version == '3.9'",
    "pathspec>=0.10.1,<1",
    "toml>=0.9.0,<1",
]

[project.urls]
Documentation = "https://unimport.hakancelik.dev/"
Issues = "https://github.com/hakancelikdev/unimport/issues/"
Changelog = "https://unimport.hakancelik.dev/1.3.0/CHANGELOG/"

[project.optional-dependencies]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.16",
    "mkdocs-markdownextradata-plugin==0.2.6",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mike==2.1.3",
]
test = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "semantic-version==2.10.0",
]

[project.scripts]
unimport = "unimport.__main__:main"

# Setuptools configuration

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "unimport",
    "unimport.commands",
    "unimport.analyzers",
]
include-package-data = true
zip-safe = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

# Dynamic version

[tool.setuptools.dynamic]
version = {attr = "unimport.__version__"}

# Tools

[tool.pytest.ini_options]
addopts = "--strict-markers"
xfail_strict = true
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.unimport]
include_star_import = true
ignore_init = true
gitignore = true

[tool.docformatter]
recursive = true
wrap-summaries = 79
wrap-descriptions = 79
blank = true

[tool.mypy]
warn_unused_configs = true
no_strict_optional = true
ignore_missing_imports = true
show_error_codes = true
