[metadata]
name = unimport
version = attr: unimport.constants.VERSION
url = https://unimport.hakancelik.dev/
author = Hakan Çelik
author_email = hakancelikdev@gmail.com
description = attr: unimport.constants.DESCRIPTION
long_description = file: README.md
keywords =
    unused
    import
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://unimport.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/unimport/issues/
    Changelog = https://unimport.hakancelik.dev/changelog

[options]
python_requires = >=3.6
include_package_data = true
zip_safe = true
packages =
    unimport
    unimport.commands
package_dir =
    =src
install_requires =
    libcst>=0.3.7; python_version >= '3.9'
    libcst>=0.3.0; python_version <= '3.8'
    pathspec>=0.5.0
    toml>=0.9.0
    dataclasses>=0.5; python_version < '3.7'
    typing-extensions>=3.7.4; python_version < '3.8'

[options.entry_points]
console_scripts =
    unimport = unimport.__main__:main

[options.extras_require]
docs =
    mkdocs==1.3.0
    mkdocs-material==8.3.6
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.5.0
    mkdocs-git-revision-date-localized-plugin==1.0.1
dev =
    pytest==6.2.4
    pytest-cov==2.12.1
    semantic-version==2.8.5

[options.package_data]
* =
  py.typed

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 79
