[metadata]
name = unimport
version = attr: unimport.__version__
description = The ultimate linter and formatter for removing unused import statements in your code.
long_description = file: README.md
url = https://unimport.hakancelik.dev/
author = Hakan Çelik
author_email = hakancelikdev@gmail.com
keywords =
    unused
    import
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://unimport.hakancelik.dev/
    Issues = https://github.com/hakancelikdev/unimport/issues/
    Changelog = https://unimport.hakancelik.dev/1.1.0/CHANGELOG/

[options]
python_requires = >=3.6, <3.12
include_package_data = true
zip_safe = true
packages =
    unimport
    unimport.commands
    unimport.analyzers
package_dir =
    =src
install_requires =
    libcst>=0.4.10, <=1.1.0; python_version >= '3.11'
    libcst>=0.3.7, <=1.1.0; python_version == '3.10'
    libcst>=0.3.7, <=1.1.0; python_version == '3.9'
    libcst>=0.3.0, <=1.1.0; python_version == '3.8'
    libcst>=0.3.0, <=1.0.1; python_version == '3.7'
    libcst>=0.3.0, <=0.4.1; python_version == '3.6'
    pathspec>=0.10.1, <1; python_version >= '3.7'
    pathspec>=0.5.0, <=0.9.0; python_version == '3.6'
    toml>=0.9.0, <1
    dataclasses>=0.5, <1; python_version == '3.6'
    typing-extensions>=3.7.4, <4; python_version < '3.8'

[options.entry_points]
console_scripts =
    unimport = unimport.__main__:main

[options.extras_require]
docs =
    mkdocs==1.5.3
    mkdocs-material==9.4.9
    mkdocs-markdownextradata-plugin==0.2.5
    mkdocs-minify-plugin==0.7.1
    mkdocs-git-revision-date-localized-plugin==1.2.1
    mike==2.0.0
test =
    pytest==6.2.4; python_version == '3.6'
    pytest==7.4.3; python_version != '3.6'
    pytest-cov==4.0.0; python_version == '3.6'
    pytest-cov==4.1.0; python_version != '3.6'
    semantic-version==2.10.0

[options.package_data]
* =
  py.typed
